{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 395,
  "lineage": "0c7a71b9-8699-e196-7466-e2f20bf835ea",
  "resources": [
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-app-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-020cba7c55df1f615",
            "arn": "arn:aws:ec2:us-east-1:834928221108:instance/i-0c036fb0c162e74a5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c036fb0c162e74a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hasancse2020",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ebab5bedc1bb7b6e",
            "private_dns": "ip-10-0-10-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.16",
            "public_dns": "ec2-3-93-174-246.compute-1.amazonaws.com",
            "public_ip": "3.93.174.246",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02ed36469841104d6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e6c25b99fb18b8e",
            "tags": {
              "Name": "webAppbyHasan-instance"
            },
            "tags_all": {
              "Name": "webAppbyHasan-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06c55c78b87d312f4"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.aws_security_group.web-app-project-sg",
            "module.hasan_web_app_name.data.aws_key_pair.hasancse2020",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:loadbalancer/app/webAppbyHasan-alb/6e02e49b937f15cb",
            "arn_suffix": "app/webAppbyHasan-alb/6e02e49b937f15cb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webAppbyHasan-alb-923629597.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:834928221108:loadbalancer/app/webAppbyHasan-alb/6e02e49b937f15cb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webAppbyHasan-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06c55c78b87d312f4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03d104afae57e7353"
              },
              {
                "subnet_id": "subnet-04e6c25b99fb18b8e"
              },
              {
                "subnet_id": "subnet-0626992a4adccef4c"
              }
            ],
            "subnets": [
              "subnet-03d104afae57e7353",
              "subnet-04e6c25b99fb18b8e",
              "subnet-0626992a4adccef4c"
            ],
            "vpc_id": "vpc-0fa8753079af556a8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:loadbalancer/app/webAppbyHasan-alb/6e02e49b937f15cb"
          },
          "dependencies": [
            "module.hasan_web_app_name.aws_security_group.web-app-project-sg",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:listener/app/webAppbyHasan-alb/6e02e49b937f15cb/a643192638ff865b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:targetgroup/webAppbyHasan-tg/06da63e536075ada",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:834928221108:listener/app/webAppbyHasan-alb/6e02e49b937f15cb/a643192638ff865b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:loadbalancer/app/webAppbyHasan-alb/6e02e49b937f15cb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.aws_lb.web_app_alb",
            "module.hasan_web_app_name.aws_lb_target_group.web_app_tg",
            "module.hasan_web_app_name.aws_security_group.web-app-project-sg",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:targetgroup/webAppbyHasan-tg/06da63e536075ada",
            "arn_suffix": "targetgroup/webAppbyHasan-tg/06da63e536075ada",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:834928221108:targetgroup/webAppbyHasan-tg/06da63e536075ada",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:834928221108:loadbalancer/app/webAppbyHasan-alb/6e02e49b937f15cb"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webAppbyHasan-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:834928221108:targetgroup/webAppbyHasan-tg/06da63e536075ada-20250725191030520700000003",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:834928221108:targetgroup/webAppbyHasan-tg/06da63e536075ada",
            "target_id": "i-0c036fb0c162e74a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.aws_instance.web-app-project",
            "module.hasan_web_app_name.aws_lb_target_group.web_app_tg",
            "module.hasan_web_app_name.aws_security_group.web-app-project-sg",
            "module.hasan_web_app_name.data.aws_key_pair.hasancse2020",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-app-project-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:security-group/sg-06c55c78b87d312f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c55c78b87d312f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webAppbyHasan-sg",
            "name_prefix": "",
            "owner_id": "834928221108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webAppbyHasan-sg"
            },
            "tags_all": {
              "Name": "webAppbyHasan-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:network-acl/acl-0535549c986950499",
            "default_network_acl_id": "acl-0535549c986950499",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0535549c986950499",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "834928221108",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-03d104afae57e7353",
              "subnet-04e6c25b99fb18b8e",
              "subnet-0626992a4adccef4c"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:route-table/rtb-0b8c1a84202a16f65",
            "default_route_table_id": "rtb-0b8c1a84202a16f65",
            "id": "rtb-0b8c1a84202a16f65",
            "owner_id": "834928221108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:security-group/sg-087c94e27b0a1c070",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-087c94e27b0a1c070",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "834928221108",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-default"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:internet-gateway/igw-0e9c18da1727eafdd",
            "id": "igw-0e9c18da1727eafdd",
            "owner_id": "834928221108",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9c18da1727eafdd",
            "id": "r-rtb-025d7e09adbe62d641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-025d7e09adbe62d64",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_internet_gateway.this",
            "module.hasan_web_app_name.module.vpc.aws_route_table.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:route-table/rtb-025d7e09adbe62d64",
            "id": "rtb-025d7e09adbe62d64",
            "owner_id": "834928221108",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9c18da1727eafdd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad2663599a46d664",
            "region": "us-east-1",
            "route_table_id": "rtb-025d7e09adbe62d64",
            "subnet_id": "subnet-04e6c25b99fb18b8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_route_table.public",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d9c323e41620de9",
            "region": "us-east-1",
            "route_table_id": "rtb-025d7e09adbe62d64",
            "subnet_id": "subnet-03d104afae57e7353"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_route_table.public",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba51af6a98002c42",
            "region": "us-east-1",
            "route_table_id": "rtb-025d7e09adbe62d64",
            "subnet_id": "subnet-0626992a4adccef4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_route_table.public",
            "module.hasan_web_app_name.module.vpc.aws_subnet.public",
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:subnet/subnet-04e6c25b99fb18b8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e6c25b99fb18b8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834928221108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:subnet/subnet-03d104afae57e7353",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d104afae57e7353",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834928221108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:subnet/subnet-0626992a4adccef4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0626992a4adccef4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "834928221108",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1c"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0fa8753079af556a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.hasan_web_app_name.module.vpc.aws_vpc.this",
            "module.hasan_web_app_name.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hasan_web_app_name.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:834928221108:vpc/vpc-0fa8753079af556a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0535549c986950499",
            "default_route_table_id": "rtb-0b8c1a84202a16f65",
            "default_security_group_id": "sg-087c94e27b0a1c070",
            "dhcp_options_id": "dopt-0a9451ffdf3fd7092",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fa8753079af556a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8c1a84202a16f65",
            "owner_id": "834928221108",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "webAppbyHasan-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}